# business-chatbot

./: .gitignore  .gitignore.save  Makefile  PRIVACY_POLICY.md  app.py  pyproject.toml  requirements.txt
src/config/: constants.py  settings.py
src/database/: customer_repo.py  redis_client.py  supabase_client.py
src/handlers/: message_handler.py  webhook_handler.py
src/models/: customer.py
src/services/: chat.py  extractor.py  gemini_client.py  groq_client.py  whatsapp.py
tests/: test_chat_full.py  test_chat_live.py  test_connections.py  test_customer.py  test_extractor.py  test_groq.py
