[project]
name = "business-chatbot"
version = "1.0.0"
description = "AI Business Assistant powered by Gemini"
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
google-generativeai = "*"
streamlit = "*"
langchain = "*"
langchain-google-genai = "*"
python-dotenv = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]